@@ -288,6 +288,10 @@ yellow 5
   use as arguments to functionals:
   \samp{map(mydict.__getitem__, keylist)}.
 
+\item Added an newcode opcode, \code{LIST_APPEND}, that simplifies
+  the generated bytecode for list comprehensions and speeds them up
+  by about a third.
+
 \end{itemize}
 
 The net result of the 2.4 optimizations is that Python 2.4 runs the
