@@ -12,6 +12,10 @@ What's New in Python 2.4 alpha 1?
 Core and builtins
 -----------------
 
+- Implemented a newcode opcode, LIST_APPEND, that simplifies
+  the generated bytecode for list comprehensions and further
+  improves their performance (about 35%).
+
 - Implemented rich comparisons for floats, which seems to make
   comparisons involving NaNs somewhat less surprising when the
   underlying C compiler actually implements C99 semantics.
